--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,5 +1,13 @@
 body
 	background: #FFF
 	+css-lock(16, 50, 600, 1000)
-	line-height: 1.4
+	font-family: 'Roboto Bold Condensed', sans-serif
+.container
+  width: 100%
+  max-width: 1000px
+  padding: 0 25px
+  margin: 0 auto
+a
+  font-size: 17px
+  text-decoration: none
 
