--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,3 +4,10 @@
 @import common
 @import layouts
 @import main
+@import fonts
+@import variables
+@import components/header
+@import components/navigation
+@import components/main
+@import components/yellow
+@import components/company
