--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>Template</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#fff">
-  <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" media="all" href="css/app.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="theme-color" content="#fff"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <link rel="stylesheet" media="all" href="css/app.css"/>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="logo">
         <div class="img">
-          <img src="../img/bumerang.png" alt="">
+          <img src="../img/bumerang.png" alt=""/>
         </div>
         <div class="text">
           <p>многопрофильная строительная компания</p>
@@ -39,7 +39,7 @@
         <li><a href="#">где купить</a></li>
         <li><a href="#">полезное</a></li>
         <li><a href="#">контакты</a></li>
-        <li><a href="#">стать дилером</a></li>
+        <li><a href="#"> дилером</a></li>
       </ul>
     </div>
   </section>
@@ -71,24 +71,24 @@
         <span class="top">сайдинг</span>
         <p>Сайдинг от «Альта-Профиль» – уникальный инновационный продукт. Он полностью соответствует международным стандартам качества и адаптирован к российским климатическим условиям.</p>
         <ul class="photos">
-          <li><img src="../img/side1.png" alt=""></li>
-          <li><img src="../img/side2.png" alt=""></li>
-          <li><img src="../img/side3.png" alt=""></li>
-          <li><img src="../img/side4.png" alt=""></li>
-          <li><img src="../img/side5.png" alt=""></li>
-          <li><img src="../img/side6.png" alt=""></li>
+          <li><img src="../img/side1.png" alt=""/></li>
+          <li><img src="../img/side2.png" alt=""/></li>
+          <li><img src="../img/side3.png" alt=""/></li>
+          <li><img src="../img/side4.png" alt=""/></li>
+          <li><img src="../img/side5.png" alt=""/></li>
+          <li><img src="../img/side6.png" alt=""/></li>
         </ul>
       </div>
       <div class="panels">
         <span class="top">Панели</span>
         <p>Элегантный цокольный сайдинг производства «Альта-Профиль» надежно защитит здание от механических повреждений и воздействия неблагоприятных климатических факторов.</p>
         <ul class="photos">
-          <li><img src="../img/side7.png" alt=""></li>
-          <li><img src="../img/side8.png" alt=""></li>
-          <li><img src="../img/side9.png" alt=""></li>
-          <li><img src="../img/side10.png" alt=""></li>
-          <li><img src="../img/side11.png" alt=""></li>
-          <li><img src="../img/side12.png" alt=""></li>
+          <li><img src="../img/side7.png" alt=""/></li>
+          <li><img src="../img/side8.png" alt=""/></li>
+          <li><img src="../img/side9.png" alt=""/></li>
+          <li><img src="../img/side10.png" alt=""/></li>
+          <li><img src="../img/side11.png" alt=""/></li>
+          <li><img src="../img/side12.png" alt=""/></li>
         </ul>
       </div>
     </div>
