--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -11,3 +11,7 @@
 @import components/main
 @import components/yellow
 @import components/company
+@import components/reviews
+@import components/news
+@import components/gallery
+@import components/footer
