--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -39,7 +39,7 @@
         <li><a href="#">где купить</a></li>
         <li><a href="#">полезное</a></li>
         <li><a href="#">контакты</a></li>
-        <li><a href="#"> дилером</a></li>
+        <li><a href="#">стать дилером</a></li>
       </ul>
     </div>
   </section>
@@ -49,7 +49,7 @@
         <ul>
           <li class="first">
             <span class="top">установка</span>
-            <span class="bottom">Выезд специалиста бесплатно</span>
+            <span class="bottom b-first">Выезд специалиста бесплатно</span>
           </li>
           <li class="second">
             <span class="top">продажа</span>
@@ -71,33 +71,130 @@
         <span class="top">сайдинг</span>
         <p>Сайдинг от «Альта-Профиль» – уникальный инновационный продукт. Он полностью соответствует международным стандартам качества и адаптирован к российским климатическим условиям.</p>
         <ul class="photos">
-          <li><img src="../img/side1.png" alt=""/></li>
-          <li><img src="../img/side2.png" alt=""/></li>
-          <li><img src="../img/side3.png" alt=""/></li>
-          <li><img src="../img/side4.png" alt=""/></li>
-          <li><img src="../img/side5.png" alt=""/></li>
-          <li><img src="../img/side6.png" alt=""/></li>
+          <li><img src="../img/side1.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side2.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side3.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side4.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side5.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side6.png" alt=""/><a href="#">Подробно</a></li>
         </ul>
       </div>
       <div class="panels">
         <span class="top">Панели</span>
         <p>Элегантный цокольный сайдинг производства «Альта-Профиль» надежно защитит здание от механических повреждений и воздействия неблагоприятных климатических факторов.</p>
         <ul class="photos">
-          <li><img src="../img/side7.png" alt=""/></li>
-          <li><img src="../img/side8.png" alt=""/></li>
-          <li><img src="../img/side9.png" alt=""/></li>
-          <li><img src="../img/side10.png" alt=""/></li>
-          <li><img src="../img/side11.png" alt=""/></li>
-          <li><img src="../img/side12.png" alt=""/></li>
+          <li><img src="../img/side7.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side8.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side9.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side10.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side11.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/side12.png" alt=""/><a href="#">Подробно</a></li>
         </ul>
       </div>
     </div>
   </section>
   <section class="company">
     <div class="container">
-
+      <h2>О компании</h2>
+      <p>«Альта-Профиль» – первый отечественный производитель качественного сайдинга. Свою деятельность мы начали еще в 1999 году, и с тех пор из небольшого завода компания превратилась в полнофункциональное производство с широкой дилерской сетью по всей России.</p>
+      <p>Руководствуясь передовыми методами и лучшими технологиями зарубежных коллег, на основе собственной лабораторной базы мы создали уникальный товар, который оптимально подходит для использования в российских климатических условиях.</p>
+      <ul>
+        <li><span><img src="../img/dds.png" alt=""/></span><span>10 лет опыта</span></li>
+        <li><span><img src="../img/sdsd.png" alt=""/></span><span>Гарантия 3 года на работы,10 лет на материалы</span></li>
+        <li><span><img src="../img/ss.png" alt=""/></span><span>Работа по договору</span></li>
+        <li><span><img src="../img/adsds.png" alt=""/></span><span>Точность расчетов без доп. счетов</span></li>
+        <li><span><img src="../img/dasd.png" alt=""/></span><span>Бесплатная доставка</span></li>
+        <li><span><img src="../img/ds.png" alt=""/></span><span>Монтаж круглый год</span></li>
+      </ul>
     </div>
   </section>
+  <section class="reviews">
+    <div class="container">
+      <div class="read-reviews">
+        <h2>отзывы</h2>
+        <ul>
+          <li>
+            <span><img src="../img/dsdsd.png" alt=""/></span>
+            <h3>Пантелеймон Христарождественский</h3>
+            <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов.  </p>
+          </li>
+          <li>
+            <span><img src="../img/fdfdfd.png" alt=""/></span>
+            <h3>Виктория Лебедева</h3>
+            <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов. Спасибо!  </p>
+          </li>
+        </ul>
+        <a href="#" class="show-all">Все новости</a>
+      </div>
+      <div class="specialist">
+        <form action="">
+          <h2>вызов специалиста</h2>
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Телефон">
+          <input class="full" type="text" placeholder="Адрес">
+          <textarea cols="30" rows="3" placeholder="Комментарий"></textarea>
+          <button>вызвать</button>
+        </form>
+      </div>
+    </div>
+  </section>
+  <section class="news">
+    <div class="container">
+      <h2>Новости</h2>
+      <ul>
+        <li>
+          <div class="img">
+            <img src="../img/dhsjd.png" alt=""/>
+          </div>
+          <div class="text">
+            <h3>Поступление нового сайдинга <span>21.06.2014</span></h3>
+
+            <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов, а также современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от</p>
+          </div>
+        </li>
+        <li>
+          <div class="img">
+            <img src="../img/ffas.png" alt=""/>
+          </div>
+          <div class="text">
+            <h3>Поступление нового сайдинга <span>21.06.2014</span></h3>
+
+            <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов, а также современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="container">
+      <h2>галерея модных домов</h2>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="footer-logo">
+        <img src="../img/bumerang-copy.png" alt=""/>
+        <span>«бумеранг» © 2000-2014</span>
+      </div>
+      <div class="footer-links">
+        <ul class="nav">
+          <li><a href="#">о компании</a></li>
+          <li><a href="#">продукция</a></li>
+          <li><a href="#">услуги</a></li>
+          <li><a href="#">галерея модных домов</a></li>
+          <li><a href="#">где купить</a></li>
+          <li><a href="#">полезное</a></li>
+          <li><a href="#">контакты</a></li>
+          <li><a href="#">стать дилером</a></li>
+        </ul>
+        <div class="contacts">
+          <p>8(800) <span>555 777 3</span></p>
+          <span>ADVcreative</span>
+        </div>
+
+      </div>
+    </div>
+  </footer>
 </div>
 <!-- END content -->
 
