--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -2,7 +2,8 @@
     box-shadow: inset 0 0 0 #ffffff;
     background-color: #898989;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.22) 0%, rgba(255, 255, 255, 0.22) 50%, rgba(0, 0, 0, 0.22) 100%);
-    background-image: url("..img/layer-28-copy.png");
+    background-image: url("../img/layer-28-copy.png");
+    background-position: 100%;
 
     .container {
         ul {
@@ -49,6 +50,12 @@
                     color: $white;
                     background-color: $dark-green;
                     opacity: 0.9;
+                }
+                .b-first {
+                    @media #{$tablet} {
+                        bottom: 10px;
+                    }
+
                 }
 
             }
