--- a/src/sass/components/navigation.scss
+++ b/src/sass/components/navigation.scss
@@ -6,6 +6,13 @@
         .nav {
             padding: 20px 0;
             display: flex;
+            @media #{$tablet} {
+                flex-wrap: wrap;
+                justify-content: center;
+                padding-bottom: 10px;
+                padding-top: 10px;
+            }
+
             li {
                 padding-right: 10px;
                 padding-left: 8px;
