--- a/src/sass/components/yellow.scss
+++ b/src/sass/components/yellow.scss
@@ -1,9 +1,10 @@
 .yellow {
     background-color: $yellow;
-    padding-bottom: 80px;
+    padding-bottom: 30px;
     .container {
         display: flex;
         .siding {
+            padding-bottom: 50px;
             border-right: 1px solid $dark-green;
         }
         .panels {
@@ -30,9 +31,30 @@
                 padding-top: 20px;
                 display: flex;
                 li {
+                    position: relative;
                     margin-right: 5px;
                     width: 72px;
                     height: 74px;
+                    a {
+                        position: absolute;
+                        top: 40%;
+                        left: 3%;
+                        color: $black;
+                        font-size: 14px;
+                        text-decoration: underline;
+                        text-transform: uppercase;
+                        display: none;
+                        @media #{$tablet} {
+                            left: 6%;
+                            font-size: 12px;
+                        }
+                    }
+
+                    &:hover {
+                        a {
+                            display: block;
+                        }
+                    }
                     img {
                         width: 100%;
                         height: 100%;
