--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,4 +1,6 @@
 // done by riverco.de
+@import node_modules/slick-carousel/slick/slick.scss
+
 @import helpers/all
 @import generated/sprite-svg
 @import common
