--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -9,16 +9,16 @@
         ul {
             display: flex;
             .first {
-                background-image: url("../img/Layer-1.png");
+                background-image: url("../img/layer-1.png");
             }
             .second {
-                background-image: url("../img/Layer-2.png");
+                background-image: url("../img/layer-2.png");
             }
             .third {
-                background-image: url("../img/Layer-3.png");
+                background-image: url("../img/layer-3.png");
             }
             .fourth {
-                background-image: url("../img/Layer-4.png");
+                background-image: url("../img/layer-4.png");
             }
             li {
                 position: relative;
