--- a/src/sass/components/reviews.scss
+++ b/src/sass/components/reviews.scss
@@ -14,6 +14,9 @@
             font-size: 24px;
             color: $white;
             text-transform: uppercase;
+            @media #{$tablet} {
+                text-align: center;
+            }
         }
         .read-reviews {
             position: relative;
