--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -8,9 +8,6 @@
   <meta name="theme-color" content="#fff"/>
   <meta name="format-detection" content="telephone=no"/>
   <link rel="stylesheet" media="all" href="css/app.css"/>
-  <script src="/slick/slick.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
 </head>
 <body>
 
@@ -168,18 +165,18 @@
       </ul>
     </div>
   </section>
-  <!--<section class="gallery">-->
-    <!--<div class="container">-->
-      <!--<h2>галерея модных домов</h2>-->
-      <!--<div class="slider multiple-items">-->
-        <!--<div><img src="../img/slider.png" alt=""></div>-->
-        <!--<div><img src="../img/slider2.png" alt=""></div>-->
-        <!--<div><img src="../img/slider3.png" alt=""></div>-->
-        <!--<div><img src="../img/slider4.png" alt=""></div>-->
-        <!--<div><img src="../img/slider5.png" alt=""></div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</section>-->
+  <section class="gallery">
+    <div class="container">
+      <h2>галерея модных домов</h2>
+      <div class="slider multiple-items" data-slick='{"slidesToShow": 3, "slidesToScroll": 1}' id="carousel">
+        <div><img src="../img/slider.png" alt=""></div>
+        <div><img src="../img/slider2.png" alt=""></div>
+        <div><img src="../img/slider3.png" alt=""></div>
+        <div><img src="../img/slider4.png" alt=""></div>
+        <div><img src="../img/slider5.png" alt=""></div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="container">
       <div class="footer-logo">
@@ -210,7 +207,6 @@
 
 <!-- BEGIN scripts -->
 <script type="text/javascript" src="../js/app.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
 <!-- END scripts -->
 
 </body>
