[ADD]slider styles+adaptive

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,5 +1,6 @@
 // done by riverco.de
 @import node_modules/slick-carousel/slick/slick.scss
+@import node_modules/slick-carousel/slick/slick-theme.scss
 
 @import helpers/all
 @import generated/sprite-svg
@@ -17,3 +18,4 @@
 @import components/news
 @import components/gallery
 @import components/footer
+@import components/slider
