--- a/src/sass/components/company.scss
+++ b/src/sass/components/company.scss
@@ -1,11 +1,11 @@
 .company {
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 45px;
     box-shadow: inset 0 0 0 #ffffff;
     background-color: #898989;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.22) 0%, rgba(255, 255, 255, 0.22) 50%, rgba(0, 0, 0, 0.22) 100%);
     background-image: url("../img/layer-28-copy.png");
-    background-position: 100%;
+    background-position: 37% 88%;
+    background-repeat: no-repeat;
     .container {
         h2 {
             font-size: 24px;
@@ -17,7 +17,7 @@
             }
         }
         p {
-            padding-top: 20px;
+            padding-top: 11px;
             color: $black;
             font-family: 'Arial MT', sans-serif;
             font-size: 14px;
@@ -32,11 +32,17 @@
             li {
                 display: flex;
                 flex-direction: column;
+                @media #{$mobile} {
+                    width: 50%;
+                }
                 span {
                     text-align: center;
                     max-width: 150px;
                     font-size: 17px;
                     text-transform: uppercase;
+                    @media #{$mobile} {
+                        font-size: 14px;
+                    }
                 }
             }
         }
