--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -1,8 +1,12 @@
 .gallery {
+    padding-top: 40px;
+    padding-bottom: 18px;
     box-shadow: inset 0 0 0 #ffffff;
     background-color: #898989;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.22) 0%, rgba(255, 255, 255, 0.22) 50%, rgba(0, 0, 0, 0.22) 100%);
     .container {
-
+        h2 {
+            padding-bottom: 30px;
+        }
     }
 }
