--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,43 +1,50 @@
 header {
-    padding: 10px 0;
+   padding-top: 10px;
     @media #{$tablet} {
         padding-bottom: 0;
         padding-top: 10px;
-    }
-    @media #{$mobile} {
-
     }
     .container {
         display: flex;
         justify-content: space-between;
         @media #{$mobile} {
-
+            flex-direction: column;
         }
         .logo {
             display: flex;
             width: 150px;
-
+            img {
+                @media #{$mobile} {
+                    width: 130px;
+                    margin-top: 18px;
+                }
+            }
             .text {
                 p {
                     @media #{$tablet} {
                         padding-top: 12px;
                     }
-                    padding-top: 5px;
+                    @media #{$mobile} {
+                        font-size: 16px;
+                    }
+                    padding-top: 10px;
                     padding-left: 5px;
                     color: $green;
                     text-transform: uppercase;
                     font-size: 18px;
                     font-weight: 400;
-                    letter-spacing: -1px;
                 }
             }
         }
         .contacts {
+            padding-top: 5px;
             position: relative;
             color: $black;
             display: flex;
             flex-direction: column;
-
+            @media #{$mobile} {
+                padding-bottom: 5px;
+            }
             p {
                 display: block;
                 position: relative;
@@ -45,6 +52,11 @@ header {
                 font-weight: 400;
                 font-family: 'Roboto Condensed', sans-serif;
                 text-align: right;
+                @media #{$mobile} {
+                    text-align: left;
+                    padding-left: 25px;
+                    font-size: 18px;
+                }
                 &:before {
                     position: absolute;
                     content: '';
@@ -54,6 +66,11 @@ header {
                     height: 34px;
                     top: 0;
                     left: -38px;
+                    @media #{$mobile} {
+                        left: 0;
+                        width: 20px;
+                        height: 20px;
+                    }
                 }
                 span {
                     font-family: 'Roboto Bold Condensed', sans-serif;
@@ -73,6 +90,16 @@ header {
                 border-radius: 3px;
                 top: 40px;
                 right: 0;
+                @media #{$mobile} {
+                    top: 0;
+                    width: 120px;
+                    font-size: 12px;
+                    line-height: 20px;
+                }
+                &:hover {
+                    color: $white;
+                }
+
             }
         }
     }
