--- a/src/sass/components/navigation.scss
+++ b/src/sass/components/navigation.scss
@@ -2,6 +2,7 @@
     background-color: $black;
     border-top: 1px solid $yellow;
     border-bottom: 1px solid $yellow;
+    padding-bottom: 10px;
     .container {
         .nav {
             padding: 20px 0;
@@ -27,6 +28,12 @@
                     font-weight: 400;
                     line-height: 20px;
                     text-transform: uppercase;
+                    @media #{$mobile} {
+                        font-size: 14px;
+                    }
+                    &:hover {
+                        color: $yellow;
+                    }
                 }
             }
         }
