[ADD]alt for pictures

--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="logo">
         <div class="img">
-          <img src="../img/bumerang.png" alt=""/>
+          <img src="../img/bumerang.png" alt="Лого"/>
         </div>
         <div class="text">
           <p>многопрофильная строительная компания</p>
@@ -71,24 +71,24 @@
         <span class="top">сайдинг</span>
         <p>Сайдинг от «Альта-Профиль» – уникальный инновационный продукт. Он полностью соответствует международным стандартам качества и адаптирован к российским климатическим условиям.</p>
         <ul class="photos">
-          <li><img src="../img/layer-5.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-6.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-7.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-8.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-9.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-10.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-5.png" alt="Сайдинг 1"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-6.png" alt="Сайдинг 2"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-7.png" alt="Сайдинг 3"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-8.png" alt="Сайдинг 4"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-9.png" alt="Сайдинг 5"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-10.png" alt="Сайдинг 6"/><a href="#">Подробно</a></li>
         </ul>
       </div>
       <div class="panels">
         <span class="top">Панели</span>
         <p>Элегантный цокольный сайдинг производства «Альта-Профиль» надежно защитит здание от механических повреждений и воздействия неблагоприятных климатических факторов.</p>
         <ul class="photos">
-          <li><img src="../img/layer-11.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-12.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-13.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-14.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-15.png" alt=""/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-16.png" alt=""/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-11.png" alt="Панель 1"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-12.png" alt="Панель 2"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-13.png" alt="Панель 3"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-14.png" alt="Панель 4"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-15.png" alt="Панель 5"/><a href="#">Подробно</a></li>
+          <li><img src="../img/layer-16.png" alt="Панель 6"/><a href="#">Подробно</a></li>
         </ul>
       </div>
     </div>
@@ -99,12 +99,12 @@
       <p>«Альта-Профиль» – первый отечественный производитель качественного сайдинга. Свою деятельность мы начали еще в 1999 году, и с тех пор из небольшого завода компания превратилась в полнофункциональное производство с широкой дилерской сетью по всей России.</p>
       <p>Руководствуясь передовыми методами и лучшими технологиями зарубежных коллег, на основе собственной лабораторной базы мы создали уникальный товар, который оптимально подходит для использования в российских климатических условиях.</p>
       <ul>
-        <li><span><img src="../img/dds.png" alt=""/></span><span>10 лет опыта</span></li>
-        <li><span><img src="../img/sdsd.png" alt=""/></span><span>Гарантия 3 года на работы,10 лет на материалы</span></li>
-        <li><span><img src="../img/ss.png" alt=""/></span><span>Работа по договору</span></li>
-        <li><span><img src="../img/adsds.png" alt=""/></span><span>Точность расчетов без доп. счетов</span></li>
-        <li><span><img src="../img/dasd.png" alt=""/></span><span>Бесплатная доставка</span></li>
-        <li><span><img src="../img/ds.png" alt=""/></span><span>Монтаж круглый год</span></li>
+        <li><span><img src="../img/dds.png" alt="10 лет опыта"/></span><span>10 лет опыта</span></li>
+        <li><span><img src="../img/sdsd.png" alt="Гарантия 3 года на работы,10 лет на материалы"/></span><span>Гарантия 3 года на работы,10 лет на материалы</span></li>
+        <li><span><img src="../img/ss.png" alt="Работа по договору"/></span><span>Работа по договору</span></li>
+        <li><span><img src="../img/adsds.png" alt="Точность расчетов без доп. счетов"/></span><span>Точность расчетов без доп. счетов</span></li>
+        <li><span><img src="../img/dasd.png" alt="Бесплатная доставка"/></span><span>Бесплатная доставка</span></li>
+        <li><span><img src="../img/ds.png" alt="Монтаж круглый год"/></span><span>Монтаж круглый год</span></li>
       </ul>
     </div>
   </section>
@@ -114,12 +114,12 @@
         <h2>отзывы</h2>
         <ul>
           <li>
-            <span><img src="../img/dsdsd.png" alt=""/></span>
+            <span><img src="../img/dsdsd.png" alt="Пантелеймон Христарождественский"/></span>
             <h3>Пантелеймон Христарождественский</h3>
             <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов.  </p>
           </li>
           <li>
-            <span><img src="../img/fdfdfd.png" alt=""/></span>
+            <span><img src="../img/fdfdfd.png" alt="Виктория Лебедева"/></span>
             <h3>Виктория Лебедева</h3>
             <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов. Спасибо!  </p>
           </li>
@@ -144,7 +144,7 @@
       <ul>
         <li>
           <div class="img">
-            <img src="../img/layer-19.png" alt=""/>
+            <img src="../img/layer-19.png" alt="Поступление нового сайдинга"/>
           </div>
           <div class="text">
             <h3>Поступление нового сайдинга <span>21.06.2014</span></h3>
@@ -154,7 +154,7 @@
         </li>
         <li>
           <div class="img">
-            <img src="../img/layer-20.png" alt=""/>
+            <img src="../img/layer-20.png" alt="Поступление нового сайдинга"/>
           </div>
           <div class="text">
             <h3>Поступление нового сайдинга <span>21.06.2014</span></h3>
@@ -170,23 +170,23 @@
       <h2>галерея модных домов</h2>
     </div>
     <div class="slider multiple-items" data-slick='{"slidesToShow": 9, "slidesToScroll": 1}' id="carousel">
-      <div><img src="../img/layer-21.png" alt=""></div>
-      <div><img src="../img/layer-22.png" alt=""></div>
-      <div><img src="../img/layer-23.png" alt=""></div>
-      <div><img src="../img/layer-24.png" alt=""></div>
-      <div><img src="../img/layer-25.png" alt=""></div>
-      <div><img src="../img/layer-23.png" alt=""></div>
-      <div><img src="../img/layer-24.png" alt=""></div>
-      <div><img src="../img/layer-25.png" alt=""></div>
-      <div><img src="../img/layer-23.png" alt=""></div>
-      <div><img src="../img/layer-24.png" alt=""></div>
-      <div><img src="../img/layer-25.png" alt=""></div>
+      <div><img src="../img/layer-21.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-22.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-23.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-24.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-25.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-23.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-24.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-25.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-23.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-24.png" alt="Модный дом"/></div>
+      <div><img src="../img/layer-25.png" alt="Модный дом"/></div>
     </div>
   </section>
   <footer>
     <div class="container">
       <div class="footer-logo">
-        <img src="../img/bumerang-copy.png" alt=""/>
+        <img src="../img/bumerang-copy.png" alt="Лого"/>
         <span>«бумеранг» © 2000-2014</span>
       </div>
       <div class="footer-links">
